# cogdist

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
cogdist/: __init__.py  bootstrap.py  comparison.py  confidenceregion.py  distance.py  overlap.py  plot.py  util.py
tests/: test_bootstrap.py
