[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cogdist"
authors = [{name = "Raf Guns", email = "raf.guns@uantwerpen.be"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
dynamic = ["version", "description"]
dependencies = [
    "numpy>=1.17",
    "pandas>=1.0",
    "tqdm>=4.60",
    "joblib>=1.1.0",
    "scipy>=1.7",
    "matplotlib>=3.0",
]

[project.optional-dependencies]
test = [
    "pytest >=6.0",
    "pytest-cov",
]

[project.urls]
Home = "https://github.com/rafguns/cogdist"
